dojo.java


    public Clause(Pointer p) {
      this(p.getInt(0));
    }
    public static final Clause Keys = new Clause(1);
    public static final Clause CMember = new Clause(2);
    public static final Clause Composite = new Clause(3);

  }

  class ClauseByReference extends ByReference {
    public ClauseByReference() {
      super(4);
    }

    public ClauseByReference(Pointer p) {
      super(4);
      setPointer(p);
    }

    public Clause getValue() {
      Pointer p = getPointer();
      return new Clause(p.getInt(0));
    }

    public void setValue(Clause value) {
      Pointer p = getPointer();
      p.setInt(0, value.intValue());
    }

  }



  class COptionClause extends IntegerType {
    public COptionClause() {
      super(4, true);
    }

    public COptionClause(long value) {
      super(4, value, true);
    }

    public COptionClause(Pointer p) {
      this(p.getInt(0));
    }
    public static final COptionClause SomeClause = new COptionClause(1);
    public static final COptionClause NoneClause = new COptionClause(2);

  }

  class COptionClauseByReference extends ByReference {
    public COptionClauseByReference() {
      super(4);
    }

    public COptionClauseByReference(Pointer p) {
      super(4);
      setPointer(p);
    }

    public COptionClause getValue() {
      Pointer p = getPointer();
      return new COptionClause(p.getInt(0));
    }

    public void setValue(COptionClause value) {
      Pointer p = getPointer();
      p.setInt(0, value.intValue());
    }

  }



  @Structure.FieldOrder({"limit", "offset", "clause"})
  class Query extends Structure implements Structure.ByValue {
    public Query() {
      super();
    }

    public Query(Pointer p) {
      super(p);
    }

    public int limit;
    public int offset;
    public COptionClause clause;

  }

  @Structure.FieldOrder({"limit", "offset", "clause"})
  class QueryByReference extends Structure implements Structure.ByReference {
    public QueryByReference() {
      super();
    }

    public QueryByReference(Pointer p) {
      super(p);
    }

    public int limit;
    public int offset;
    public COptionClause clause;

  }



  @Structure.FieldOrder({"data", "data_len"})
  class CArrayFieldElement extends Structure implements Structure.ByValue {
    public CArrayFieldElement() {
      super();
    }

    public CArrayFieldElement(Pointer p) {
      super(p);
    }

    public FieldElementByReference data;
    public _Size data_len;

  }

  @Structure.FieldOrder({"data", "data_len"})
  class CArrayFieldElementByReference extends Structure implements Structure.ByReference {
    public CArrayFieldElementByReference() {
      super();
    }

    public CArrayFieldElementByReference(Pointer p) {
      super(p);
    }

    public FieldElementByReference data;
    public _Size data_len;

  }



  @Structure.FieldOrder({"schema",
                         "namespace_",
                         "name",
                         "packed_size",
                         "unpacked_size",
                         "class_hash",
                         "contract_address",
                         "layout"})
  class ModelMetadata extends Structure implements Structure.ByValue {
    public ModelMetadata() {
      super();
    }

    public ModelMetadata(Pointer p) {
      super(p);
    }

    public Ty schema;
    public ByteByReference namespace_;
    public ByteByReference name;
    public int packed_size;
    public int unpacked_size;
    public FieldElement class_hash;
    public FieldElement contract_address;
    public CArrayFieldElement layout;

  }

  @Structure.FieldOrder({"schema",
                         "namespace_",
                         "name",
                         "packed_size",
                         "unpacked_size",
                         "class_hash",
                         "contract_address",
                         "layout"})
  class ModelMetadataByReference extends Structure implements Structure.ByReference {
    public ModelMetadataByReference() {
      super();
    }

    public ModelMetadataByReference(Pointer p) {
      super(p);
    }

    public Ty schema;
    public ByteByReference namespace_;
    public ByteByReference name;
    public int packed_size;
    public int unpacked_size;
    public FieldElement class_hash;
    public FieldElement contract_address;
    public CArrayFieldElement layout;

  }



  @Structure.FieldOrder({"key", "value"})
  class CHashItemFieldElementModelMetadata extends Structure implements Structure.ByValue {
    public CHashItemFieldElementModelMetadata() {
      super();
    }

    public CHashItemFieldElementModelMetadata(Pointer p) {
      super(p);
    }

    public FieldElement key;
    public ModelMetadata value;

  }

  @Structure.FieldOrder({"key", "value"})
  class CHashItemFieldElementModelMetadataByReference extends Structure implements Structure.ByReference {
    public CHashItemFieldElementModelMetadataByReference() {
      super();
    }

    public CHashItemFieldElementModelMetadataByReference(Pointer p) {
      super(p);
    }

    public FieldElement key;
    public ModelMetadata value;

  }



  @Structure.FieldOrder({"data", "data_len"})
  class CArrayCHashItemFieldElementModelMetadata extends Structure implements Structure.ByValue {
    public CArrayCHashItemFieldElementModelMetadata() {
      super();
    }

    public CArrayCHashItemFieldElementModelMetadata(Pointer p) {
      super(p);
    }

    public CHashItemFieldElementModelMetadataByReference data;
    public _Size data_len;

  }

  @Structure.FieldOrder({"data", "data_len"})
  class CArrayCHashItemFieldElementModelMetadataByReference extends Structure implements Structure.ByReference {
    public CArrayCHashItemFieldElementModelMetadataByReference() {
      super();
    }

    public CArrayCHashItemFieldElementModelMetadataByReference(Pointer p) {
      super(p);
    }

    public CHashItemFieldElementModelMetadataByReference data;
    public _Size data_len;

  }



  @Structure.FieldOrder({"world_address", "models"})
  class WorldMetadata extends Structure implements Structure.ByValue {
    public WorldMetadata() {
      super();
    }

    public WorldMetadata(Pointer p) {
      super(p);
    }

    public FieldElement world_address;
    public CArrayCHashItemFieldElementModelMetadata models;

  }

  @Structure.FieldOrder({"world_address", "models"})
  class WorldMetadataByReference extends Structure implements Structure.ByReference {
    public WorldMetadataByReference() {
      super();
    }

    public WorldMetadataByReference(Pointer p) {
      super(p);
    }

    public FieldElement world_address;
    public CArrayCHashItemFieldElementModelMetadata models;

  }



  class ResultSubscription extends IntegerType {
    public ResultSubscription() {
      super(4, true);
    }

    public ResultSubscription(long value) {
      super(4, value, true);
    }

    public ResultSubscription(Pointer p) {
      this(p.getInt(0));
    }
    public static final ResultSubscription OkSubscription = new ResultSubscription(1);
    public static final ResultSubscription ErrSubscription = new ResultSubscription(2);

  }

  class ResultSubscriptionByReference extends ByReference {
    public ResultSubscriptionByReference() {
      super(4);
    }

    public ResultSubscriptionByReference(Pointer p) {
      super(4);
      setPointer(p);
    }

    public ResultSubscription getValue() {
      Pointer p = getPointer();
      return new ResultSubscription(p.getInt(0));
    }

    public void setValue(ResultSubscription value) {
      Pointer p = getPointer();
      p.setInt(0, value.intValue());
    }

  }



  class EntityKeysClause extends IntegerType {
    public EntityKeysClause() {
      super(4, true);
    }

    public EntityKeysClause(long value) {
      super(4, value, true);
    }

    public EntityKeysClause(Pointer p) {
      this(p.getInt(0));
    }
    public static final EntityKeysClause HashedKeys = new EntityKeysClause(1);
    public static final EntityKeysClause EntityKeys = new EntityKeysClause(2);

  }

  class EntityKeysClauseByReference extends ByReference {
    public EntityKeysClauseByReference() {
      super(4);
    }

    public EntityKeysClauseByReference(Pointer p) {
      super(4);
      setPointer(p);
    }

    public EntityKeysClause getValue() {
      Pointer p = getPointer();
      return new EntityKeysClause(p.getInt(0));
    }

    public void setValue(EntityKeysClause value) {
      Pointer p = getPointer();
      p.setInt(0, value.intValue());
    }

  }



  class Resultbool extends IntegerType {
    public Resultbool() {
      super(4, true);
    }

    public Resultbool(long value) {
      super(4, value, true);
    }

    public Resultbool(Pointer p) {
      this(p.getInt(0));
    }
    public static final Resultbool Okbool = new Resultbool(1);
    public static final Resultbool Errbool = new Resultbool(2);

  }

  class ResultboolByReference extends ByReference {
    public ResultboolByReference() {
      super(4);
    }

    public ResultboolByReference(Pointer p) {
      super(4);
      setPointer(p);
    }

    public Resultbool getValue() {
      Pointer p = getPointer();
      return new Resultbool(p.getInt(0));
    }

    public void setValue(Resultbool value) {
      Pointer p = getPointer();
      p.setInt(0, value.intValue());
    }

  }



  class ResultCArrayFieldElement extends IntegerType {
    public ResultCArrayFieldElement() {
      super(4, true);
    }

    public ResultCArrayFieldElement(long value) {
      super(4, value, true);
    }

    public ResultCArrayFieldElement(Pointer p) {
      this(p.getInt(0));
    }
    public static final ResultCArrayFieldElement OkCArrayFieldElement = new ResultCArrayFieldElement(1);
    public static final ResultCArrayFieldElement ErrCArrayFieldElement = new ResultCArrayFieldElement(2);

  }

  class ResultCArrayFieldElementByReference extends ByReference {
    public ResultCArrayFieldElementByReference() {
      super(4);
    }

    public ResultCArrayFieldElementByReference(Pointer p) {
      super(4);
      setPointer(p);
    }

    public ResultCArrayFieldElement getValue() {
      Pointer p = getPointer();
      return new ResultCArrayFieldElement(p.getInt(0));
    }

    public void setValue(ResultCArrayFieldElement value) {
      Pointer p = getPointer();
      p.setInt(0, value.intValue());
    }

  }



  class Resultc_char extends IntegerType {
    public Resultc_char() {
      super(4, true);
    }

    public Resultc_char(long value) {
      super(4, value, true);
    }

    public Resultc_char(Pointer p) {
      this(p.getInt(0));
    }
    public static final Resultc_char Okc_char = new Resultc_char(1);
    public static final Resultc_char Errc_char = new Resultc_char(2);

  }

  class Resultc_charByReference extends ByReference {
    public Resultc_charByReference() {
      super(4);
    }

    public Resultc_charByReference(Pointer p) {
      super(4);
      setPointer(p);
    }

    public Resultc_char getValue() {
      Pointer p = getPointer();
      return new Resultc_char(p.getInt(0));
    }

    public void setValue(Resultc_char value) {
      Pointer p = getPointer();
      p.setInt(0, value.intValue());
    }

  }



  class ResultFieldElement extends IntegerType {
    public ResultFieldElement() {
      super(4, true);
    }

    public ResultFieldElement(long value) {
      super(4, value, true);
    }

    public ResultFieldElement(Pointer p) {
      this(p.getInt(0));
    }
    public static final ResultFieldElement OkFieldElement = new ResultFieldElement(1);
    public static final ResultFieldElement ErrFieldElement = new ResultFieldElement(2);

  }

  class ResultFieldElementByReference extends ByReference {
    public ResultFieldElementByReference() {
      super(4);
    }

    public ResultFieldElementByReference(Pointer p) {
      super(4);
      setPointer(p);
    }
